<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyEnglish</string>
    <string name="app_id">591631684250216</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data. Please try again later.</string>
    <string name="failed_to_load_sound">Failed to load sound. Please try again later.</string>
    <string name="no_internet">No internet connection. Please check your network state and try again.</string>
    <string name="about">This app was created by Serhii Hrabas for educational reasons. API side was provided from service  <u>http://easy-english.yzi.me</u> developed by Igor Kordiak.</string>

    <!-- Menu -->
    <string name="menu_finish">Finish</string>
    <!-- Facebook login -->
    <string name="get_started">To get started, log in using Facebook</string>
    <!-- Login -->
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="login">Log-in</string>
    <string name="login_using_socials">Log-in using socials</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_gplus">Login with Google+</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="empty_credentials">Empty credentials</string>
    <string name="wrong_credentials">Wrong username or password. Please try again.</string>
    <string name="preference_file_key">com.tntu.easyenglish.auth_key</string>
    <string name="auth_failed">Sorry, authorization failed. Please try again later.</string>

    <!-- Signup -->
    <string name="passwords_not_same">Passwords are not the same! Please retype it.</string>

    <!-- Navigation Drawer -->
    <string name="menu_search_title">Search</string>
    <string name="menu_search_hint">Add word</string>
    <string name="menu_refresh">Refresh</string>

    <string-array name="main_menu_loged">
        <item>Profile</item>
        <item>Exercises</item>
        <item>Words and phrases</item>
        <item>Dictionary</item>
        <item>Content</item>
        <item>About</item>
        <item>Sign out</item>
    </string-array>

    <!-- Content -->
    <string name="select_translation">select a translation</string>
    <string name="added_to_dictionary">added to your dictionary</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <!-- Profile -->
    <string name="hello">Hello</string>
    <!-- Exercises -->
    <string name="word_trans">Word-Translation</string>
    <string name="trans_word">Translation-Word</string>
    <string name="word_constructor">Word Constructor</string>
    <string name="listening">Listening</string>
    <string name="dont_know">Don\'t know</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>