<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_top_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/logEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/logoIv"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/edit_text_padding"
        android:textSize="@dimen/buttons_text_size"
        android:text="insearching"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/logEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/edit_text_padding"
        android:textSize="@dimen/buttons_text_size"
        android:text="email@google.com"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/emailEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/edit_text_padding"
        android:textSize="@dimen/buttons_text_size"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/confirmPassEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/passwordEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/edit_text_padding"
        android:textSize="@dimen/buttons_text_size"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/addWordTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_below="@+id/confirmPassEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:background="@drawable/login_button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/buttons_text_size" />

</RelativeLayout>