<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/loginEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:ems="10"
        android:hint="@string/username_or_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/edit_text_padding"
        android:singleLine="true"
        android:textSize="@dimen/buttons_text_size"
        android:text="insearching"/>

    <EditText
        android:id="@+id/passEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/loginEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/edit_text_padding"
        android:textSize="@dimen/buttons_text_size"
        android:text="130592"/>

    <TextView
        android:id="@+id/submitTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/passEt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:text="@string/submit"
        android:textSize="@dimen/buttons_text_size"
        android:textColor="@color/white"/>
    
    <com.facebook.widget.LoginButton
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:id="@+id/facebookButt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/submitTv"
        android:padding="5dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        facebook:confirm_logout="false"
        facebook:fetch_user_info="true"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/facebookButt"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginTop="@dimen/login_margin_top"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/notRegisteredTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/not_registered_yet"
        android:textSize="@dimen/default_text_size" />

</RelativeLayout>