<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/wordIv"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_width"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/origTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/answerEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/origTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerEt"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/doneTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exercise_button_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dontKnowTv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exercise_button_height"
            android:layout_below="@+id/doneTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dont_know"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/audioIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/answerEt"
        android:layout_alignTop="@+id/wordIv"
        android:src="@drawable/sound" />

</RelativeLayout>